Task2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task2-deployment
  labels:
    app: task2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task2-app
  template:
    metadata:
      labels:
        app: task2-app
    spec:
      containers:
        - name: task2-app
          image: shestera/scaletestapp:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "30Mi"
