Task2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task2-service
spec:
  selector:
    app: task2-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
